--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+   
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -30,6 +31,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   firebase_auth: ^0.18.1+2
   cloud_firestore: ^0.14.1+3
+
+  flutter_gauge: ^1.0.8
 
 dev_dependencies:
   flutter_test:
