--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  firebase_auth: ^0.18.1+2
-  cloud_firestore: ^0.14.1+3
-  firebase_core: "^0.5.0"
+  firebase_auth: ^1.0.1
+  cloud_firestore: ^1.0.1
+  firebase_core: ^1.0.0
+  firebase_database: ^6.0.0
 
   flutter_gauge: ^1.0.8
 
