--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
 
   rflutter_alert: ^1.0.2
 
+flutter_native_splash:
+  image: assets/images/playstore.png
+  color: "42a5f5"
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
