--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_database: ^6.0.0
 
   flutter_gauge: ^1.0.8
+  syncfusion_flutter_gauges: ^18.2.44
 
   rflutter_alert: ^1.0.2
 
